Kubernetes/Openproject/yamls/ig-openproject.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-openproject-https-redirect
  namespace: openproject
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-openproject-security
  namespace: openproject
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-openproject-websecure
  namespace: openproject
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openproject.domain.com`)
      services:
        - name: openproject
          port: 80
          serversTransport: traefik-openproject-transport
      middlewares:
        - name: traefik-openproject-security
  tls:
    secretName: openproject-domain-com
    options:
      name: traefik-openproject-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-openproject-web
  namespace: openproject
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`openproject.domain.com`)
      services:
        - name: openproject
          port: 80
      middlewares:
        - name: traefik-openproject-https-redirect
